--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Baltej # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Connecting the Dots # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -26,23 +26,23 @@ description: >- # used by seo meta and the atom feed
 url: ""
 
 github:
-  username: github_username # change to your GitHub username
+  username: baltejgiri # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: giribaltej # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Baltej Giri
+  email: baltej.giri@live.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
+    - https://twitter.com/giribaltej # change to your Twitter homepage
+    - https://github.com/baltejgiri # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+     - https://www.linkedin.com/in/baltej-giri
 
 # Site Verification Settings
 webmaster_verifications:
