--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/Vancouver
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Baltej # the main title
+title: Baltej Giri # the main title
 
 tagline: Connecting the Dots # it will display as the subtitle
 
@@ -38,11 +38,11 @@ social:
   email: baltej.giri@live.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/giribaltej # change to your Twitter homepage
-    - https://github.com/baltejgiri # change to your GitHub homepage
+    #- https://twitter.com/giribaltej # change to your Twitter homepage
+    #- https://github.com/baltejgiri # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-     - https://www.linkedin.com/in/baltej-giri
+    - https://www.linkedin.com/in/baltej-giri
 
 # Site Verification Settings
 webmaster_verifications:
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/62271605?v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
