--- a/_config.yml
+++ b/_config.yml
@@ -38,11 +38,11 @@ social:
   email: baltej.giri@live.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    #- https://twitter.com/giribaltej # change to your Twitter homepage
-    #- https://github.com/baltejgiri # change to your GitHub homepage
+    - https://twitter.com/giribaltej # change to your Twitter homepage
+    - https://github.com/baltejgiri # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    #- https://www.linkedin.com/in/baltej-giri
+    - https://www.linkedin.com/in/baltej-giri
 
 # Site Verification Settings
 webmaster_verifications:
