--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,5 @@
   "terminal.integrated.profiles.osx": {
     "zsh": { "path": "/bin/zsh", "args": ["-l", "-i"] }
   },
-  "cSpell.words": ["autonegotiation"]
+  "cSpell.words": ["autonegotiation", "switchport", "switchports"]
 }
